UI: Increase Navbar z-index to fix overlap with map controls

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -116,7 +116,7 @@ ul {
     box-shadow: var(--shadow);
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 2000;
 }
 
 .navbar .container {
